--- a/index.html
+++ b/index.html
@@ -1646,77 +1646,266 @@ const operatorUsername = "budapuff_meneger";
 
   "Жидкости": [
     {
-      name: "2780",
-      price: 400,
+      name: "THC Liquid Maui Wowie 89 mg 30 ml",
+      price: 4350,
       image: "liquids/2780.jpg",
-      description: "Насыщенный вкус с мягким послевкусием. Отлично подходит для ежедневного использования."
-    },
+      description: `
+🌺 <strong>Жидкость с ТГК 89 мг – Maui Wowie</strong>  
+<span style="opacity:0.8;">Премиальная жидкость • 30 мл</span>
+
+Изысканная формула ТГК от <strong>Canapuff</strong> с мягким, сбалансированным характером.  
+Создана для тех, кто ценит качество, чистоту вкуса и комфортное ощущение.
+
+✨ <strong>Особенности:</strong>  
+• Содержание ТКГ≤ 12%  
+• Без выраженного психоактивного эффекта  
+• Мягкий, ровный профиль  
+
+🌈 <strong>Возможные эффекты:</strong>  
+😊 Лёгкое расслабление  
+🎨 Усиление восприятия  
+🍽 Стимуляция аппетита  
+🩹 Возможное снижение дискомфорта  
+
+🔌 Подходит для POD-систем  
+📦 Объём: 30 мл
+`
     {
-      name: "2786",
-      price: 450,
+      name: "THC Liquid 89 mg 1000 mg CBC Weeding Cake 30 ml",
+      price: 4350,
       image: "liquids/2786_1.jpg",
-      description: "Сбалансированная жидкость с приятным ароматом и лёгкой сладостью."
-    },
+      description: `
+💎 <strong>Жидкость с ТГК</strong>  
+<span style="opacity:0.8;">Гармоничный профиль • 30 мл</span>
+
+Премиальная жидкость с тщательно сбалансированной формулой.  
+Создана для тех, кто ценит мягкое, комфортное и ровное ощущение без перегруза.
+
+🔬 <strong>Содержание ТГК ≤ 12%</strong>  
+Без выраженного психоактивного эффекта.
+
+🌈 <strong>Особенности:</strong>  
+😊 Лёгкое приподнятое настроение  
+🎨 Более яркое сенсорное восприятие  
+🧘 Расслабление и снижение напряжения  
+✨ Идеально для спокойных, уютных моментов  
+
+🔌 Подходит для POD-систем  
+📦 Объём: 30 мл
+`
     {
-      name: "2789",
-      price: 450,
+      name: "THC Liquid 89mg 2000mg CBD Wild Watermelon 30ml",
+      price: 4350,
       image: "liquids/2789.jpg",
-      description: "Яркий вкус с плотным паром и длительным ароматом."
-    },
+      description: `
+🍉 <strong>Жидкость ТГК</strong>  
+<span style="opacity:0.8;">Сочная серия • 30 мл</span>
+
+Премиальная жидкость от <strong>Budapuff</strong> с тщательно выверенной формулой.  
+Идеальный выбор для тех, кто ценит качество, мягкость и стабильность.
+
+🌿 Лёгкое и комфортное действие — отлично подойдёт для расслабленного отдыха и спокойных вечеров.
+
+🔬 <strong>Содержание ТГК ≤ 12%</strong>  
+Без выраженного психоактивного эффекта.
+
+🌈 <strong>Особенности:</strong>  
+😊 Приподнятое настроение  
+🎨 Яркий и сочный вкусовой профиль  
+🧘 Мягкое расслабление без перегруза  
+✨ Подходит для повседневного использования  
+
+🔌 Подходит для POD-систем  
+📦 Объём: 30 мл
+`
     {
-      name: "Dosi Kush",
-      price: 500,
+      name: "THP420 Liquid Dosi Kush 1.500mg",
+      price: 4350,
       image: "liquids/dosi_kush.jpg",
-      description: "Глубокий насыщенный вкус с мягкой сладковатой ноткой."
-    },
+      description: `
+🌿 <strong>Доси Куш</strong>  
+<span style="opacity:0.8;">Жидкость с ТГК • 30 мл</span>
+
+Изысканная жидкость от <strong>Canapuff</strong>, вдохновлённая легендарным характером Dosy Kush.  
+Гармоничное сочетание насыщенных и мягких оттенков создаёт уютную, тёплую атмосферу с глубоким вкусом.
+
+🌬 <strong>Вкусовой профиль:</strong>  
+🌲 Лёгкие хвойные акценты  
+🌰 Тёплые ореховые нюансы  
+🍪 Кремово-сладкое послевкусие  
+🌿 Мягкий травянистый штрих в финале  
+
+Каждая затяжка раскрывается постепенно, формируя бархатистую, объёмную композицию с долгим и сбалансированным послевкусием.
+
+🔬 Содержание ТГК ≤ 12%  
+Без выраженного психоактивного эффекта.
+
+🔌 Подходит для POD-систем  
+📦 Объём: 30 мл
+`
     {
-      name: "LCG",
-      price: 500,
+      name: "HHC-A Liquid Lemon Cherry Gelato 1.500 mg",
+      price: 4350,
       image: "liquids/lcg.jpg",
-      description: "Освежающий вкус с лёгким цитрусовым оттенком."
-    },
+      description: `
+🍋🍒 <strong>Лимонно-вишнёвый Gelato</strong>  
+<span style="opacity:0.8;">Десертная серия с ТГК • 30 мл</span>
+
+Ароматная жидкость от <strong>Canapuff</strong> с выразительным и многослойным профилем.  
+Контраст цитрусовой свежести и сладкой вишнёвой глубины создаёт гармоничный, запоминающийся вкус.
+
+🌬 <strong>Вкусовой профиль:</strong>  
+🍋 Яркие освежающие лимонные ноты  
+🍒 Сочная сладость спелой вишни  
+🍦 Нежные сливочные оттенки Gelato  
+✨ Бархатистое и сбалансированное послевкусие  
+
+Композиция раскрывается постепенно — от цитрусового акцента к мягкой десертной глубине, создавая уютную атмосферу и ощущение комфорта.
+
+🔬 Содержание ТГК ≤ 12%  
+Без выраженного психоактивного эффекта.
+
+🔌 Подходит для POD-систем  
+📦 Объём: 30 мл
+`
     {
-      name: "Mint",
-      price: 450,
+      name: "THC Liquid 89 mg 2000 mg CBD Fresh Mint 30 ml",
+      price: 4350,
       image: "liquids/mint.jpg",
-      description: "Чистая освежающая мята с прохладным эффектом."
-    },
+      description: `
+🌿 <strong>Fresh Mint</strong>  
+<span style="opacity:0.8;">Освежающая серия с ТГК • 30 мл</span>
+
+Чистый и бодрящий мятный профиль от <strong>Canapuff</strong>.  
+Идеальный выбор для тех, кто предпочитает свежесть, лёгкость и кристально прозрачный вкус.
+
+🌬 <strong>Вкусовой профиль:</strong>  
+🌱 Интенсивная натуральная мята  
+❄️ Прохладный охлаждающий эффект  
+🍃 Лёгкий травянистый штрих  
+✨ Чистое и освежающее послевкусие  
+
+Дарит ощущение прохлады и лёгкости с первой затяжки, оставляя приятный мятный баланс без перегруза.
+
+🔬 Содержание ТГК ≤ 15%  
+Без выраженного психоактивного эффекта.
+
+🔌 Подходит для POD-систем  
+📦 Объём: 30 мл
+`
     {
-      name: "OG Cush",
-      price: 500,
+      name: "THC Liquid 89mg 1000mg CBC OG Kush 30ml",
+      price: 4350,
       image: "liquids/ogcush.jpg",
-      description: "Плотный вкус с насыщенным ароматом и мягким паром."
-    },
+      description: `
+🌿 <strong>OG Kush</strong>  
+<span style="opacity:0.8;">Жидкость с ТГК • 30 мл</span>
+
+Выразительная жидкость от <strong>Canapuff</strong> с насыщенным, благородным профилем.  
+Создана для ценителей классических глубоких ароматов и сложной вкусовой структуры.
+
+🌬 <strong>Вкусовой профиль:</strong>  
+🌲 Хвойно-древесные ноты  
+🌿 Мягкие травянистые оттенки  
+🌰 Тёплый землистый акцент  
+✨ Гармоничное и бархатистое послевкусие  
+
+Композиция раскрывается постепенно, формируя плотный, сбалансированный и многогранный вкус с характерной глубиной.
+
+🔬 Содержание ТГК ≤ 15%  
+Без выраженного психоактивного эффекта.
+
+🔌 Подходит для POD-систем  
+📦 Объём: 30 мл
+`
     {
-      name: "Original Z",
-      price: 500,
+      name: "THP420 Liquid Original Z 1.500mg",
+      price: 4350,
       image: "liquids/original_z.jpg",
-      description: "Сладковатый аромат с лёгкой фруктовой ноткой."
-    },
+      description: `
+🍇 <strong>Original Z</strong>  
+<span style="opacity:0.8;">Жидкость с ТГК • 30 мл</span>
+
+Ароматная жидкость от <strong>Canapuff</strong> с ярким и многослойным фруктовым характером.  
+Создана для тех, кто ценит сладкие, насыщенные и выразительные композиции.
+
+🌬 <strong>Вкусовой профиль:</strong>  
+🍬 Сладкие фруктовые ноты  
+🍇 Оттенки спелых ягод  
+🍭 Лёгкий конфетный акцент  
+✨ Мягкое и бархатистое послевкусие  
+
+Композиция раскрывается постепенно — от сочной ягодной сладости к нежному десертному финалу, создавая тёплую и уютную атмосферу.
+
+🔬 Содержание ТГК ≤ 12%  
+Без выраженного психоактивного эффекта.
+
+🔌 Подходит для POD-систем  
+📦 Объём: 30 мл
+`
     {
-      name: "Permanent Marker",
-      price: 550,
+      name: "9H-THC Liquid Permanent Marker 1.500mg",
+      price: 4350,
       image: "liquids/permanent_marker.jpg",
-      description: "Интенсивный аромат с ярким и долгим послевкусием."
-    },
+      description: `
+🖊 <strong>Permanent Marker</strong>  
+<span style="opacity:0.8;">Жидкость с ТГК • 30 мл</span>
+
+Выразительный терпеновый профиль от <strong>Canapuff</strong> с ярким цветочным характером и насыщенными виноградными оттенками.  
+В 2023 году данный профиль получил признание как «Сорт года», покорив ценителей своей интенсивностью и узнаваемым ароматом.
+
+🌬 <strong>Вкусовой профиль:</strong>  
+🌸 Богатые цветочные акценты  
+🍇 Сладкие ноты фиолетового винограда  
+🖊 Глубокий, слегка чернильный штрих  
+✨ Сложное и многослойное послевкусие  
+
+Композиция раскрывается постепенно — от сладкой ягодной глубины к выразительному цветочному финалу, создавая плотный, насыщенный и запоминающийся характер.
+
+🔬 Содержание ТГК ≤ 17%  
+Без выраженного психоактивного эффекта.
+
+🔌 Подходит для POD-систем  
+📦 Объём: 30 мл
+`
     {
-      name: "Super Lemon Haze",
-      price: 550,
+      name: "9H-HHC Liquid Super Lemon Haze 1.500mg",
+      price: 4350,
       image: "liquids/super_lemon_haze.jpg",
-      description: "Яркий лимонный вкус с освежающим эффектом."
-    }
+      description: `
+🍋 <strong>Super Lemon Haze</strong>  
+<span style="opacity:0.8;">Жидкость с ТГК • 30 мл</span>
+
+Яркий и многослойный профиль от <strong>Canapuff</strong>, вдохновлённый сочетанием Lemon Skunk и Super Silver Haze.  
+Композиция раскрывается как настоящее вкусовое путешествие — от цитрусовой сладости к глубокой древесной структуре.
+
+🌬 <strong>Вкусовой профиль:</strong>  
+🍋 Сладкая лимонная глазурь с лёгкой пряностью  
+⛽ Свежий резкий акцент с характерной глубиной  
+🌲 Тёплые древесные ноты кедра  
+🍍 Оттенки тропических фруктов и ананаса  
+🥥 Лёгкая карамельно-кокосовая сладость  
+
+Аромат развивается постепенно, формируя сложное, изысканное и запоминающееся впечатление с благородным цитрусовым послевкусием.
+
+🔬 Содержание активных компонентов ≤ 12%  
+Без выраженного психоактивного эффекта.
+
+🔌 Подходит для POD-систем  
+📦 Объём: 30 мл
+`
   ],
 
   "POD-системы": [
     {
       name: "9 Pound Hammer",
-      price: 2500,
+      price: 5650,
       image: "pods/9poundhammer.png",
       description: "Компактная POD-система с высокой мощностью и стабильной тягой."
     },
     {
       name: "Big Bad Bear",
-      price: 3000,
+      price: 5650,
       image: "pods/bigbadbear.png",
       description: "Мощная POD-система с удобной заправкой и долгой работой аккумулятора."
     }
@@ -1725,19 +1914,19 @@ const operatorUsername = "budapuff_meneger";
   "Съедобные товары": [
     {
       name: "Browne",
-      price: 500,
+      price: 3550,
       image: "food/broune.png",
       description: "Насыщенный шоколадный вкус с мягкой текстурой."
     },
     {
       name: "Cookie",
-      price: 450,
+      price: 2850,
       image: "food/cookie.png",
       description: "Классическое печенье с приятной сладостью."
     },
     {
       name: "THC Cherry",
-      price: 550,
+      price: 2250,
       image: "food/thc_cherry.png",
       description: "Сладкая вишнёвая нотка с ярким ароматом."
     }
@@ -1746,7 +1935,7 @@ const operatorUsername = "budapuff_meneger";
     "Расслабляющий чай": [
     {
         name: "Кратом",
-        price: 900,
+        price: 2850,
         image: "tea/relax_tea.png",
         description: `
 🌿 <strong>Kratom Tea — натуральная энергия и расслабление</strong>
