--- a/index.html
+++ b/index.html
@@ -1646,7 +1646,7 @@ const operatorUsername = "budapuff_meneger";
 
   "Жидкости": [
     {
-      name: "THC Liquid Maui Wowie 89 mg 30 ml",
+      id: "THC Liquid Maui Wowie 89 mg 30 ml",
       price: 4350,
       image: "liquids/2780.jpg",
       description: `
@@ -1671,7 +1671,7 @@ const operatorUsername = "budapuff_meneger";
 📦 Объём: 30 мл
 `
     {
-      name: "THC Liquid 89 mg 1000 mg CBC Weeding Cake 30 ml",
+      id: "THC Liquid 89 mg 1000 mg CBC Weeding Cake 30 ml",
       price: 4350,
       image: "liquids/2786_1.jpg",
       description: `
@@ -1694,7 +1694,7 @@ const operatorUsername = "budapuff_meneger";
 📦 Объём: 30 мл
 `
     {
-      name: "THC Liquid 89mg 2000mg CBD Wild Watermelon 30ml",
+      id: "THC Liquid 89mg 2000mg CBD Wild Watermelon 30ml",
       price: 4350,
       image: "liquids/2789.jpg",
       description: `
@@ -1719,7 +1719,7 @@ const operatorUsername = "budapuff_meneger";
 📦 Объём: 30 мл
 `
     {
-      name: "THP420 Liquid Dosi Kush 1.500mg",
+      id: "THP420 Liquid Dosi Kush 1.500mg",
       price: 4350,
       image: "liquids/dosi_kush.jpg",
       description: `
@@ -1744,7 +1744,7 @@ const operatorUsername = "budapuff_meneger";
 📦 Объём: 30 мл
 `
     {
-      name: "HHC-A Liquid Lemon Cherry Gelato 1.500 mg",
+      id: "HHC-A Liquid Lemon Cherry Gelato 1.500 mg",
       price: 4350,
       image: "liquids/lcg.jpg",
       description: `
@@ -1769,7 +1769,7 @@ const operatorUsername = "budapuff_meneger";
 📦 Объём: 30 мл
 `
     {
-      name: "THC Liquid 89 mg 2000 mg CBD Fresh Mint 30 ml",
+      id: "THC Liquid 89 mg 2000 mg CBD Fresh Mint 30 ml",
       price: 4350,
       image: "liquids/mint.jpg",
       description: `
@@ -1794,7 +1794,7 @@ const operatorUsername = "budapuff_meneger";
 📦 Объём: 30 мл
 `
     {
-      name: "THC Liquid 89mg 1000mg CBC OG Kush 30ml",
+      id: "THC Liquid 89mg 1000mg CBC OG Kush 30ml",
       price: 4350,
       image: "liquids/ogcush.jpg",
       description: `
@@ -1819,7 +1819,7 @@ const operatorUsername = "budapuff_meneger";
 📦 Объём: 30 мл
 `
     {
-      name: "THP420 Liquid Original Z 1.500mg",
+      id: "THP420 Liquid Original Z 1.500mg",
       price: 4350,
       image: "liquids/original_z.jpg",
       description: `
@@ -1844,7 +1844,7 @@ const operatorUsername = "budapuff_meneger";
 📦 Объём: 30 мл
 `
     {
-      name: "9H-THC Liquid Permanent Marker 1.500mg",
+      id: "9H-THC Liquid Permanent Marker 1.500mg",
       price: 4350,
       image: "liquids/permanent_marker.jpg",
       description: `
@@ -1869,7 +1869,7 @@ const operatorUsername = "budapuff_meneger";
 📦 Объём: 30 мл
 `
     {
-      name: "9H-HHC Liquid Super Lemon Haze 1.500mg",
+      id: "9H-HHC Liquid Super Lemon Haze 1.500mg",
       price: 4350,
       image: "liquids/super_lemon_haze.jpg",
       description: `
@@ -1898,13 +1898,13 @@ const operatorUsername = "budapuff_meneger";
 
   "POD-системы": [
     {
-      name: "9 Pound Hammer",
+      id: "9 Pound Hammer",
       price: 5650,
       image: "pods/9poundhammer.png",
       description: "Компактная POD-система с высокой мощностью и стабильной тягой."
     },
     {
-      name: "Big Bad Bear",
+      id: "Big Bad Bear",
       price: 5650,
       image: "pods/bigbadbear.png",
       description: "Мощная POD-система с удобной заправкой и долгой работой аккумулятора."
@@ -1913,19 +1913,19 @@ const operatorUsername = "budapuff_meneger";
 
   "Съедобные товары": [
     {
-      name: "Browne",
+      id: "Browne",
       price: 3550,
       image: "food/broune.png",
       description: "Насыщенный шоколадный вкус с мягкой текстурой."
     },
     {
-      name: "Cookie",
+      id: "Cookie",
       price: 2850,
       image: "food/cookie.png",
       description: "Классическое печенье с приятной сладостью."
     },
     {
-      name: "THC Cherry",
+      id: "THC Cherry",
       price: 2250,
       image: "food/thc_cherry.png",
       description: "Сладкая вишнёвая нотка с ярким ароматом."
@@ -1934,7 +1934,7 @@ const operatorUsername = "budapuff_meneger";
     
     "Расслабляющий чай": [
     {
-        name: "Кратом",
+        id: "Кратом",
         price: 2850,
         image: "tea/relax_tea.png",
         description: `
@@ -1964,7 +1964,7 @@ Kratom Tea — это насыщенный травяной напиток с г
 "Съедобные грибы": [
 
     {
-        name: "NIAGARA",
+        id: "NIAGARA",
         price: 1500,
         images: [
             "mushrooms/mushroom_1_1.jpg",
@@ -1988,7 +1988,7 @@ Kratom Tea — это насыщенный травяной напиток с г
     },
 
     {
-        name: "HYBRID ALBINO A+",
+        id: "HYBRID ALBINO A+",
         price: 1300,
         images: [
             "mushrooms/mushroom_2_1.jpg",
@@ -2019,7 +2019,7 @@ Kratom Tea — это насыщенный травяной напиток с г
     },
 
     {
-        name: "McKENNAII #2",
+        id: "McKENNAII #2",
         price: 1200,
         images: [
             "mushrooms/mushroom_3_1.jpg",
@@ -2043,7 +2043,7 @@ Kratom Tea — это насыщенный травяной напиток с г
     "Автоцветущие": [
 
         {
-            name: "Orange Creampop Auto",
+            id: "Orange Creampop Auto",
             price: 2500,
             images: [
                 "/rose_seeds/auto/auto_1_1.jpg",
@@ -2063,7 +2063,7 @@ Kratom Tea — это насыщенный травяной напиток с г
         },
 
         {
-            name: "Gelato Auto",
+            id: "Gelato Auto",
             price: 2400,
             images: [
                 "/rose_seeds/auto/auto_2_1.jpg",
@@ -2083,7 +2083,7 @@ Kratom Tea — это насыщенный травяной напиток с г
         },
 
         {
-            name: "Wedding Cake Auto",
+            id: "Wedding Cake Auto",
             price: 2600,
             images: [
                 "/rose_seeds/auto/auto_3_1.jpg",
@@ -2103,7 +2103,7 @@ Kratom Tea — это насыщенный травяной напиток с г
         },
 
         {
-            name: "Gorilla Glue Auto",
+            id: "Gorilla Glue Auto",
             price: 2550,
             images: [
                 "/rose_seeds/auto/auto_4_1.jpg",
@@ -2123,7 +2123,7 @@ Kratom Tea — это насыщенный травяной напиток с г
         },
 
         {
-            name: "Zkittlez Auto",
+            id: "Zkittlez Auto",
             price: 2450,
             images: [
                 "/rose_seeds/auto/auto_5_1.jpg",
@@ -2146,7 +2146,7 @@ Kratom Tea — это насыщенный травяной напиток с г
     "Фотопериодные": [
 
         {
-            name: "Orange Creampop FEM",
+            id: "Orange Creampop FEM",
             price: 2700,
             images: [
                 "/rose_seeds/photo/photo_1_1.jpg",
@@ -2166,7 +2166,7 @@ Kratom Tea — это насыщенный травяной напиток с г
         },
 
         {
-            name: "Gelato FEM",
+            id: "Gelato FEM",
             price: 2800,
             images: [
                 "/rose_seeds/photo/photo_2_1.jpg",
@@ -2186,7 +2186,7 @@ Kratom Tea — это насыщенный травяной напиток с г
         },
 
         {
-            name: "Wedding Cake FEM",
+            id: "Wedding Cake FEM",
             price: 2900,
             images: [
                 "/rose_seeds/photo/photo_3_1.jpg",
@@ -2206,7 +2206,7 @@ Kratom Tea — это насыщенный травяной напиток с г
         },
 
         {
-            name: "Gorilla Glue FEM",
+            id: "Gorilla Glue FEM",
             price: 2850,
             images: [
                 "/rose_seeds/photo/photo_4_1.jpg",
@@ -2226,7 +2226,7 @@ Kratom Tea — это насыщенный травяной напиток с г
         },
 
         {
-            name: "Zkittlez FEM",
+            id: "Zkittlez FEM",
             price: 2750,
             images: [
                 "/rose_seeds/photo/photo_5_1.jpg",
