--- a/index.html
+++ b/index.html
@@ -1646,7 +1646,8 @@ const operatorUsername = "budapuff_meneger";
 
   "Жидкости": [
     {
-      id: "THC Liquid Maui Wowie 89 mg 30 ml",
+      name: "THC Liquid Maui Wowie 89 mg 30 ml",
+      id: "2780",
       price: 4350,
       image: "liquids/2780.jpg",
       description: `
@@ -1672,7 +1673,8 @@ const operatorUsername = "budapuff_meneger";
 `
 },
 {
-      id: "THC Liquid 89 mg 1000 mg CBC Weeding Cake 30 ml",
+  name: "THC Liquid 89 mg 1000 mg CBC Weeding Cake 30 ml",
+      id: "2786",
       price: 4350,
       image: "liquids/2786_1.jpg",
       description: `
@@ -1696,7 +1698,8 @@ const operatorUsername = "budapuff_meneger";
 `
 },
 {
-      id: "THC Liquid 89mg 2000mg CBD Wild Watermelon 30ml",
+  name: "THC Liquid 89mg 2000mg CBD Wild Watermelon 30ml",
+      id: "2789",
       price: 4350,
       image: "liquids/2789.jpg",
       description: `
@@ -1722,7 +1725,8 @@ const operatorUsername = "budapuff_meneger";
 `
 },
 {
-      id: "THP420 Liquid Dosi Kush 1.500mg",
+  name: "THP420 Liquid Dosi Kush 1.500mg",
+      id: "Dosi Kush",
       price: 4350,
       image: "liquids/dosi_kush.jpg",
       description: `
@@ -1748,7 +1752,8 @@ const operatorUsername = "budapuff_meneger";
 `
 },
 {
-      id: "HHC-A Liquid Lemon Cherry Gelato 1.500 mg",
+  name: "HHC-A Liquid Lemon Cherry Gelato 1.500 mg",
+      id: "LCG",
       price: 4350,
       image: "liquids/lcg.jpg",
       description: `
@@ -1774,7 +1779,8 @@ const operatorUsername = "budapuff_meneger";
 `
 },
 {
-      id: "THC Liquid 89 mg 2000 mg CBD Fresh Mint 30 ml",
+  name: "THC Liquid 89 mg 2000 mg CBD Fresh Mint 30 ml",
+      id: "Mint",
       price: 4350,
       image: "liquids/mint.jpg",
       description: `
@@ -1800,7 +1806,8 @@ const operatorUsername = "budapuff_meneger";
 `
 },
 {
-      id: "THC Liquid 89mg 1000mg CBC OG Kush 30ml",
+  name: "THC Liquid 89mg 1000mg CBC OG Kush 30ml",
+      id: "OG Cush",
       price: 4350,
       image: "liquids/ogcush.jpg",
       description: `
@@ -1826,7 +1833,8 @@ const operatorUsername = "budapuff_meneger";
 `
 },
 {
-      id: "THP420 Liquid Original Z 1.500mg",
+  name: "THP420 Liquid Original Z 1.500mg", 
+      id: "Original Z",
       price: 4350,
       image: "liquids/original_z.jpg",
       description: `
@@ -1852,7 +1860,8 @@ const operatorUsername = "budapuff_meneger";
 `
 },
 {
-      id: "9H-THC Liquid Permanent Marker 1.500mg",
+  name: "9H-THC Liquid Permanent Marker 1.500mg",
+      id: "Permanent Marker",
       price: 4350,
       image: "liquids/permanent_marker.jpg",
       description: `
@@ -1878,7 +1887,8 @@ const operatorUsername = "budapuff_meneger";
 `
 },
 {
-      id: "9H-HHC Liquid Super Lemon Haze 1.500mg",
+  name: "9H-HHC Liquid Super Lemon Haze 1.500mg",
+      id: "Super Lemon Haze",
       price: 4350,
       image: "liquids/super_lemon_haze.jpg",
       description: `
